resolve fixed of StorageTarjetaCsv